welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:90: error: ')' expected but '}' found.
  }
  ^